--- a/config.properties
+++ b/config.properties
@@ -1,4 +1,4 @@
 #This description goes to the header of a file
-#Thu Jul 08 11:02:38 EDT 2021
-password=Test@1234
+#Fri Jul 09 17:56:04 IST 2021
+password=Test@123
 username=testinkbox@gmail.com
