--- a/config.properties
+++ b/config.properties
@@ -1,4 +1,5 @@
 #This description goes to the header of a file
 #Mon Jul 12 13:06:28 EDT 2021
-password=Test@123
+gmail_facebookpassword=Inkbox!123
 username=testinkbox@gmail.com
+password=Test@123
