added empty search results ...

--- a/config.properties
+++ b/config.properties
@@ -1,5 +1,6 @@
 #This description goes to the header of a file
-#Mon Jul 12 13:06:28 EDT 2021
-gmail_facebookpassword=Inkbox!123
+#Thu Jul 15 11:45:52 EDT 2021
+password=Test@1234
+gmail_facebookpassword=Inkbox\!123
 username=testinkbox@gmail.com
-password=Test@123
+gmail_facebook_username=testinkbox@gmail.com
